--- a/import/winbuttons.css
+++ b/import/winbuttons.css
@@ -6,7 +6,7 @@
   * @website https://github.com/cutekita/snippets
 */
 
-html {
+html:root {
   --wb-sw-compat: 0px; /*Compatibility between Winbuttons and Settingswindow*/
   --wb-fs-compat: 48px; /*Compatibility between Winbuttons and Fullscreensettings*/
   --custom-app-top-bar-height: 0px; /*Just make the bar 0 height, think of the consequences later*/
